--- a/app/Resources/translations/messages.cs.yml
+++ b/app/Resources/translations/messages.cs.yml
@@ -44,6 +44,7 @@ permissions: Práva
 role.administrator: Administrátor
 role.user: Uživatel
 description: Popis
+language: Jazyk
 user.confirm.delete: 'Jste si jisti, že chcete smazat tento účet?'
 user.conflict.username: 'Účet se zadaným uživatelským jménem již existuje.'
 password.too.short: 'Heslo musí být dlouhé alespoň %length% znaků.'
