--- a/app/Resources/translations/messages.es.yml
+++ b/app/Resources/translations/messages.es.yml
@@ -44,6 +44,7 @@ permissions: Permisos
 role.administrator: Administrador
 role.user: Usuario
 description: Descripción
+language: Idioma
 user.confirm.delete: '¿Está seguro de eliminar esta cuenta?'
 user.conflict.username: 'Ya existe una cuenta con ese nombre de usuario.'
 password.too.short: 'La contraseña debe tener una logintud mínima de %length% caracteres.'
