--- a/app/Resources/translations/messages.hu.yml
+++ b/app/Resources/translations/messages.hu.yml
@@ -44,6 +44,7 @@ permissions: Jogosultságok
 role.administrator: Adminisztrátor
 role.user: Felhasználó
 description: Leírás
+language: Nyelv
 user.confirm.delete: 'Biztos törölni szeretné a felhasználót?'
 user.conflict.username: 'Már létezik ilyen névvel ellátott felhasználó.'
 password.too.short: 'A jelszónak legalább %length% hosszúságúnak kell lennie.'
