--- a/app/Resources/translations/messages.ro.yml
+++ b/app/Resources/translations/messages.ro.yml
@@ -44,6 +44,7 @@ permissions: Permisiuni
 role.administrator: Administrator
 role.user: Utilizator
 description: Descriere
+language: Limba
 user.confirm.delete: 'Sunteti sigur ca doriti sa stergeti acest cont?'
 user.conflict.username: 'Numele de utilizator este deja folosit.'
 password.too.short: 'Parola trebuie sa aiba cel putin %length% caractere.'
