--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -44,6 +44,7 @@ permissions: Permissions
 role.administrator: Administrator
 role.user: User
 description: Description
+language: Language
 user.confirm.delete: 'Are you sure you want delete this account?'
 user.conflict.username: 'Account with entered user name already exists.'
 password.too.short: 'Password should be at least %length% characters length.'
