--- a/app/Resources/translations/messages.de.yml
+++ b/app/Resources/translations/messages.de.yml
@@ -45,6 +45,7 @@ role.administrator: Administrator
 role.user: Benutzer
 description: Beschreibung
 language: Sprache
+theme: Aussehen
 user.confirm.delete: 'Möchten Sie dieses Konto wirklich löschen?'
 user.conflict.username: 'Ein Konto mit diesem Benutzernamen existiert bereits.'
 password.too.short: 'Das Passwort muss mindestens %length% Zeichen lang sein.'
