--- a/app/Resources/translations/messages.it.yml
+++ b/app/Resources/translations/messages.it.yml
@@ -45,6 +45,7 @@ role.administrator: Amministratore
 role.user: Utente
 description: Descrizione
 language: Lingua
+theme: Tema
 user.confirm.delete: 'Eliminare questo account?'
 user.conflict.username: 'Nome utente già utilizzato.'
 password.too.short: 'La password deve essere almeno lunga %length% caratteri.'
