--- a/app/Resources/translations/messages.pl.yml
+++ b/app/Resources/translations/messages.pl.yml
@@ -45,6 +45,7 @@ role.administrator: Administrator
 role.user: Użytkownik
 description: Opis
 language: Języki
+theme: Motyw
 user.confirm.delete: 'Czy jesteś pewien, że chesz usunąć wybrane konto?'
 user.conflict.username: 'Wprowadzona nazwa konta już istnieje.'
 password.too.short: 'Hasło powinno mieć co najmniej %length% znaków.'
