--- a/app/Resources/translations/messages.pt_BR.yml
+++ b/app/Resources/translations/messages.pt_BR.yml
@@ -45,6 +45,7 @@ role.administrator: Administrador
 role.user: Usuário
 description: Descrição
 language: Língua
+theme: Tema
 user.confirm.delete: 'Tem certeza que quer apagar esta conta?'
 user.conflict.username: 'A conta escolhida já existe..'
 password.too.short: 'A senha deve conter pelo menos %length% caracteres.'
