--- a/app/Resources/translations/messages.ru.yml
+++ b/app/Resources/translations/messages.ru.yml
@@ -45,6 +45,7 @@ role.administrator: Администратор
 role.user: Пользователь
 description: Описание
 language: Язык
+theme: Дизайн
 user.confirm.delete: 'Вы уверены, что хотите удалить эту учетную запись?'
 user.conflict.username: 'Учетная запись с таким именем пользователя уже существует.'
 password.too.short: 'Пароль должен содержать как минимум %length% символов.'
