--- a/app/Resources/translations/messages.bg.yml
+++ b/app/Resources/translations/messages.bg.yml
@@ -46,6 +46,7 @@ role.user: Потребител
 description: Описание
 language: Език
 theme: Тема
+timezone: 'Времева зона'
 user.confirm.delete: 'Сигурен ли сте че искате да изтриете този акаунт?'
 user.conflict.username: 'Акаунт с въведенето потребителско име вече съществува.'
 password.too.short: 'Паролата трябва да е най-малко с %length% символ дължина.'
