--- a/app/Resources/translations/messages.cs.yml
+++ b/app/Resources/translations/messages.cs.yml
@@ -46,6 +46,7 @@ role.user: Uživatel
 description: Popis
 language: Jazyk
 theme: Vzhled
+timezone: 'Časová zóna'
 user.confirm.delete: 'Jste si jisti, že chcete smazat tento účet?'
 user.conflict.username: 'Účet se zadaným uživatelským jménem již existuje.'
 password.too.short: 'Heslo musí být dlouhé alespoň %length% znaků.'
