--- a/app/Resources/translations/messages.hu.yml
+++ b/app/Resources/translations/messages.hu.yml
@@ -46,6 +46,7 @@ role.user: Felhasználó
 description: Leírás
 language: Nyelv
 theme: Téma
+timezone: Időzóna
 user.confirm.delete: 'Biztos törölni szeretné a felhasználót?'
 user.conflict.username: 'Már létezik ilyen névvel ellátott felhasználó.'
 password.too.short: 'A jelszónak legalább %length% hosszúságúnak kell lennie.'
