--- a/app/Resources/translations/messages.lv.yml
+++ b/app/Resources/translations/messages.lv.yml
@@ -46,6 +46,7 @@ role.user: Lietotājs
 description: Apraksts
 language: Valoda
 theme: Motīvs
+timezone: 'Laika zona'
 user.confirm.delete: 'Vai tiešām vēlaties dzēst šo kontu?'
 user.conflict.username: 'Lietotāja konts ar tādu lietotāja vārdu jau eksistē.'
 password.too.short: 'Parolei jāsatur vismaz %length% simbolu.'
