--- a/app/Resources/translations/messages.tr.yml
+++ b/app/Resources/translations/messages.tr.yml
@@ -46,6 +46,7 @@ role.user: Kullanıcı
 description: Yorum
 language: Dil
 theme: Tema
+timezone: 'Saat dilimi'
 user.confirm.delete: 'Bu hesabı silmek istediğinizden emin misiniz?'
 user.conflict.username: 'Girilen kullanıcı adıyla bir hesap zaten var.'
 password.too.short: 'Parola en az %length% karakter uzunluğunda olmalıdır.'
