--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -46,6 +46,7 @@ role.user: User
 description: Description
 language: Language
 theme: Theme
+timezone: Timezone
 user.confirm.delete: 'Are you sure you want delete this account?'
 user.conflict.username: 'Account with entered user name already exists.'
 password.too.short: 'Password should be at least %length% characters length.'
