--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -46,6 +46,7 @@ role.user: Utilisateur
 description: Description
 language: Langue
 theme: Thème
+timezone: 'Fuseau horaire'
 user.confirm.delete: 'Etes-vous sur de vouloir effacer ce compte?'
 user.conflict.username: 'Il existe déjà un compte portant ce nom.'
 password.too.short: 'Le mot de passe doit comporter au moins %length% caracteres.'
