--- a/app/Resources/translations/messages.pl.yml
+++ b/app/Resources/translations/messages.pl.yml
@@ -46,6 +46,7 @@ role.user: Użytkownik
 description: Opis
 language: Języki
 theme: Motyw
+timezone: 'Strefa czasowa'
 user.confirm.delete: 'Czy jesteś pewien, że chesz usunąć wybrane konto?'
 user.conflict.username: 'Wprowadzona nazwa konta już istnieje.'
 password.too.short: 'Hasło powinno mieć co najmniej %length% znaków.'
