--- a/app/Resources/translations/messages.ja.yml
+++ b/app/Resources/translations/messages.ja.yml
@@ -51,3 +51,14 @@ user.confirm.delete: アカウントを削除してよろしいですか？
 user.conflict.username: 入力されたユーザーの名前は既に存在しています。
 password.too.short: 'パスワードは最低 %length% 文字以上である必要があります。'
 passwords.dont.match: パスワードが一致しません。
+key.tab: Tab
+key.space: Space
+comma: Comma
+colon: Colon
+semicolon: Semicolon
+vertical_line: 'Vertical line'
+file: ファイル
+size: サイズ
+delimiter: 区切り文字
+encoding: 出力時のエンコード
+line_endings: 改行コード
