--- a/app/Resources/translations/messages.pl.yml
+++ b/app/Resources/translations/messages.pl.yml
@@ -51,3 +51,14 @@ user.confirm.delete: 'Czy jesteś pewien, że chesz usunąć wybrane konto?'
 user.conflict.username: 'Wprowadzona nazwa konta już istnieje.'
 password.too.short: 'Hasło powinno mieć co najmniej %length% znaków.'
 passwords.dont.match: 'Hasła nie są identyczne.'
+key.tab: Tab
+key.space: Space
+comma: Comma
+colon: Colon
+semicolon: Semicolon
+vertical_line: 'Vertical line'
+file: Plik
+size: Rozmiar
+delimiter: 'Znak rozdzielenia'
+encoding: Kodowanie
+line_endings: 'Zakończenie lini'
