--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -74,3 +74,12 @@ group.local: Local
 group.confirm.delete: 'Are you sure you want delete this group?'
 group.conflict.name: 'Group with entered name already exists.'
 project: Project
+projects: Projects
+project.new: 'New project'
+project.name: 'Project name'
+project.start_time: 'Start time'
+project.status: Status
+project.active: Active
+project.suspended: Suspended
+project.confirm.delete: 'Are you sure you want delete this project?'
+project.conflict.name: 'Project with entered name already exists.'
