--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -74,3 +74,12 @@ group.local: Local
 group.confirm.delete: 'Etes-vous sur de vouloir effacer ce groupe?'
 group.conflict.name: 'Il existe déjà un groupe portant ce nom.'
 project: Projet
+projects: Projets
+project.new: 'Nouveau projet'
+project.name: 'Nom du projet'
+project.start_time: Début
+project.status: Statut
+project.active: Actif
+project.suspended: Suspendu
+project.confirm.delete: 'Etes-vous sur de vouloir effacer ce projet?'
+project.conflict.name: 'Il existe déjà un projet portant ce nom.'
