--- a/app/Resources/translations/messages.ja.yml
+++ b/app/Resources/translations/messages.ja.yml
@@ -74,3 +74,12 @@ group.local: ローカル
 group.confirm.delete: グループを削除してよろしいですか？
 group.conflict.name: 入力されたグループの名前は既に存在しています。
 project: プロジェクト
+projects: プロジェクト
+project.new: 新規プロジェクト
+project.name: プロジェクト名
+project.start_time: 開始日
+project.status: 状態
+project.active: アクティブ
+project.suspended: 保留中
+project.confirm.delete: プロジェクトを削除してよろしいですか？
+project.conflict.name: 入力されたプロジェクトの名前は既に存在しています。
